# galaxy

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.tmp_test_cli/061015f733524d7f89ae9ec40659a1cc/: candidates.json
.tmp_test_cli/08a9e9eb0c76440191d9d82263c82675/: candidates.json
.tmp_test_cli/0996e732d43b4b97b8050c9058eba785/: candidates.json
.tmp_test_cli/139dede4c5574b808c7c9f5420602f39/: candidates.json
.tmp_test_cli/1ab8a001ed204fc180d73832d550df61/: candidates.json
.tmp_test_cli/207e449f3d414331a6e9e1153c6a4964/: candidates.json
.tmp_test_cli/20e60a761c364fc08dda8c1a917b002d/: candidates.json
.tmp_test_cli/24de8f4d3b344998a8ad79049f20ee36/: candidates.json
.tmp_test_cli/255a5f0cd58d4df2a37e93f1dbae985e/: candidates.json
.tmp_test_cli/2a63a031048646bc8f3ada2bb22202c7/: candidates.json  config.yaml
.tmp_test_cli/36002df9c60e43a8afee5dcbc1380a34/: candidates.json
.tmp_test_cli/36a78abd9d7743e8b2f8f5824e4893e9/: candidates.json
.tmp_test_cli/39dab8de8c064a20a491d7dc65a566b8/: candidates.json
.tmp_test_cli/3ddbf0f90cee42b982169dd5593febce/: candidates.json
.tmp_test_cli/3f61f365667a4ccb96aabe8e1d422f5d/: candidates.json
.tmp_test_cli/46ae4169581447e8ada081941020a512/: candidates.json
docs/: design-requirements.md
examples/: orion.yaml  pillars.yaml  tutorial.md
src/galaxy/: __init__.py  (+18 more)
tests/: conftest.py  test_cli.py  test_config.py  test_fitsio.py  test_integration_public.py  test_mapping_tone.py  test_mast.py  test_pipeline_modes.py  test_planes_and_exports.py  test_psf.py  test_reprojection.py  test_ui.py
(+63 files in other folders)
